[package]
name = "rusty_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "rusty_tracker"
path = "src/server.rs"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
prost-types = "0.10.1"
# futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
tokio = { version = "1.19.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"

[build-dependencies]
tonic-build = "0.7.2"
